--- a/.github/workflows/test_macos.yml
+++ b/.github/workflows/test_macos.yml
@@ -1,14 +1,14 @@
 name: MacOS Build
 
 # Controls when the action will run.
-on: [push, pull_request, workflow_dispatch]
+on: [workflow_dispatch]
 
 jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-13]
+        os: [macos-14]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
